[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Star7-Eaowe.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/UI/CheckerBannerButton.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 3
outline_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StreamTexture" id=5]
flags = 4
load_path = "res://.import/CheckerBannerButton.png-25501d2e1b94438cfbbdaa2acc5fee86.stex"

[sub_resource type="DynamicFont" id=6]
size = 18
outline_size = 3
outline_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 375.0
margin_top = 205.0
margin_right = 648.0
margin_bottom = 395.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 273.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "Game Over!!!"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 273.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Your score was 0"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 273.0
margin_bottom = 190.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 72.0
margin_right = 200.0
margin_bottom = 122.0

[node name="PlayAgainButton" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 38.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/PlayAgainButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 3 )
text = "Play Again"
align = 1
valign = 1

[node name="WorldButton" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 128.0
margin_bottom = 80.0
texture_normal = SubResource( 5 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/WorldButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 6 )
text = "World"
align = 1
valign = 1

[node name="MainMenuButton" type="TextureButton" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 128.0
margin_bottom = 122.0
texture_normal = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/MainMenuButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 4 )
text = "Main Menu"
align = 1
valign = 1

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/WorldButton" to="." method="_on_WorldButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/WorldButton" to="." method="_on_WorldButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/WorldButton" to="." method="_on_WorldButton_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
